--- a/embedded/adc_sample/MDK/adc_sample.uvprojx
+++ b/embedded/adc_sample/MDK/adc_sample.uvprojx
@@ -301,7 +301,7 @@
               <OCR_RVCT9>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x10000</Size>
+                <Size>0x20000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>PT32Z192,MSC_CLOCK</Define>
               <Undefine></Undefine>
-              <IncludePath>..\application\app;..\source;..\driver\inc;..\common;..\cmsis;..\application\rtt;..\application\dhrystone;..\application\fft;..\application\nr_micro_shell\inc;..\application\fifo;..\application\bsp</IncludePath>
+              <IncludePath>..\application\app;..\source;..\driver\inc;..\common;..\cmsis;..\application\rtt;..\application\dhrystone;..\application\fft;..\application\nr_micro_shell\inc;..\application\fifo;..\application\bsp;..\application\EventRecorder</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -387,16 +387,6 @@
               <FileName>app.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\application\app\app.c</FilePath>
-            </File>
-            <File>
-              <FileName>fifo.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\application\fifo\fifo.c</FilePath>
-            </File>
-            <File>
-              <FileName>fifo.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\application\fifo\fifo.h</FilePath>
             </File>
             <File>
               <FileName>bsp.c</FileName>
@@ -582,6 +572,92 @@
               <FileName>nr_micro_shell_commands.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\source\nr_micro_shell_commands.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>memory</GroupName>
+          <Files>
+            <File>
+              <FileName>fifo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\fifo\fifo.c</FilePath>
+            </File>
+            <File>
+              <FileName>fifo.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\application\fifo\fifo.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>EventRecorder</GroupName>
+          <Files>
+            <File>
+              <FileName>EventRecorder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\EventRecorder\EventRecorder.c</FilePath>
+              <FileOption>
+                <CommonProperty>
+                  <UseCPPCompiler>2</UseCPPCompiler>
+                  <RVCTCodeConst>9</RVCTCodeConst>
+                  <RVCTZI>4</RVCTZI>
+                  <RVCTOtherData>4</RVCTOtherData>
+                  <ModuleSelection>0</ModuleSelection>
+                  <IncludeInBuild>2</IncludeInBuild>
+                  <AlwaysBuild>2</AlwaysBuild>
+                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
+                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
+                  <PublicsOnly>2</PublicsOnly>
+                  <StopOnExitCode>11</StopOnExitCode>
+                  <CustomArgument></CustomArgument>
+                  <IncludeLibraryModules></IncludeLibraryModules>
+                  <ComprImg>1</ComprImg>
+                </CommonProperty>
+                <FileArmAds>
+                  <Cads>
+                    <interw>2</interw>
+                    <Optim>0</Optim>
+                    <oTime>2</oTime>
+                    <SplitLS>2</SplitLS>
+                    <OneElfS>2</OneElfS>
+                    <Strict>2</Strict>
+                    <EnumInt>2</EnumInt>
+                    <PlainCh>2</PlainCh>
+                    <Ropi>2</Ropi>
+                    <Rwpi>2</Rwpi>
+                    <wLevel>0</wLevel>
+                    <uThumb>2</uThumb>
+                    <uSurpInc>2</uSurpInc>
+                    <uC99>2</uC99>
+                    <uGnu>2</uGnu>
+                    <useXO>2</useXO>
+                    <v6Lang>0</v6Lang>
+                    <v6LangP>0</v6LangP>
+                    <vShortEn>2</vShortEn>
+                    <vShortWch>2</vShortWch>
+                    <v6Lto>2</v6Lto>
+                    <v6WtE>2</v6WtE>
+                    <v6Rtti>2</v6Rtti>
+                    <VariousControls>
+                      <MiscControls></MiscControls>
+                      <Define></Define>
+                      <Undefine></Undefine>
+                      <IncludePath></IncludePath>
+                    </VariousControls>
+                  </Cads>
+                </FileArmAds>
+              </FileOption>
+            </File>
+            <File>
+              <FileName>EventRecorderConf.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\application\EventRecorder\EventRecorderConf.h</FilePath>
+            </File>
+            <File>
+              <FileName>retarget_io.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\EventRecorder\retarget_io.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -920,7 +996,7 @@
               <MiscControls></MiscControls>
               <Define>PT32Z192,VECT_TAB_SRAM,MSC_CLOCK</Define>
               <Undefine></Undefine>
-              <IncludePath>..\application\app;..\source;..\driver\inc;..\common;..\cmsis;..\application\rtt;..\application\dhrystone;..\application\fft;..\application\nr_micro_shell\inc;..\application\bsp</IncludePath>
+              <IncludePath>..\application\app;..\source;..\driver\inc;..\common;..\cmsis;..\application\rtt;..\application\dhrystone;..\application\fft;..\application\nr_micro_shell\inc;..\application\bsp;..\application\EventRecorder</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -968,16 +1044,6 @@
               <FileName>app.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\application\app\app.c</FilePath>
-            </File>
-            <File>
-              <FileName>fifo.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\application\fifo\fifo.c</FilePath>
-            </File>
-            <File>
-              <FileName>fifo.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\application\fifo\fifo.h</FilePath>
             </File>
             <File>
               <FileName>bsp.c</FileName>
@@ -1163,6 +1229,41 @@
               <FileName>nr_micro_shell_commands.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\source\nr_micro_shell_commands.c</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>memory</GroupName>
+          <Files>
+            <File>
+              <FileName>fifo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\fifo\fifo.c</FilePath>
+            </File>
+            <File>
+              <FileName>fifo.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\application\fifo\fifo.h</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
+          <GroupName>EventRecorder</GroupName>
+          <Files>
+            <File>
+              <FileName>EventRecorder.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\EventRecorder\EventRecorder.c</FilePath>
+            </File>
+            <File>
+              <FileName>EventRecorderConf.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\application\EventRecorder\EventRecorderConf.h</FilePath>
+            </File>
+            <File>
+              <FileName>retarget_io.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\EventRecorder\retarget_io.c</FilePath>
             </File>
           </Files>
         </Group>
