adc_sample: burn script, do, adc, rtt, ramcode all ok!

--- a/embedded/adc_sample/MDK/adc_sample.uvprojx
+++ b/embedded/adc_sample/MDK/adc_sample.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>..\application\app;..\application\HardFaultHandlerMDK;..\application\rtt;..\cmsis;..\common;..\driver\Inc;..\source;..\bsp\inc;..\application\nr_micro_shell;..\application\EventRecorder;..\application\fifo;..\application\bsp;..\application\adc;..\application\hardware;..\application\uart;..\application\clk</IncludePath>
+              <IncludePath>..\application\app;..\application\HardFaultHandlerMDK;..\application\rtt;..\cmsis;..\common;..\driver\Inc;..\source;..\bsp\inc;..\application\nr_micro_shell;..\application\EventRecorder;..\application\fifo;..\application\bsp;..\application\adc;..\application\hardware;..\application\uart;..\application\clk;..\application\do</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -417,6 +417,16 @@
               <FileName>clk.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\application\clk\clk.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>rtt.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\application\rtt\rtt.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>do.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\application\do\do.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -970,7 +980,7 @@
               <MiscControls></MiscControls>
               <Define>VECT_TAB_SRAM</Define>
               <Undefine></Undefine>
-              <IncludePath>..\application\app;..\application\HardFaultHandlerMDK;..\application\rtt;..\cmsis;..\common;..\driver\Inc;..\source;..\bsp\inc;..\application\hardware;..\application\nr_micro_shell;..\application\adc;..\application\EventRecorder;..\application\fifo;..\application\uart;..\application\clk</IncludePath>
+              <IncludePath>..\application\app;..\application\HardFaultHandlerMDK;..\application\rtt;..\cmsis;..\common;..\driver\Inc;..\source;..\bsp\inc;..\application\hardware;..\application\nr_micro_shell;..\application\adc;..\application\EventRecorder;..\application\fifo;..\application\uart;..\application\clk;..\application\do</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1048,6 +1058,16 @@
               <FileName>clk.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\application\clk\clk.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>rtt.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\application\rtt\rtt.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>do.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\application\do\do.cpp</FilePath>
             </File>
           </Files>
         </Group>
