--- a/embedded/adc_sample/MDK/adc_sample.uvprojx
+++ b/embedded/adc_sample/MDK/adc_sample.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define></Define>
               <Undefine></Undefine>
-              <IncludePath>..\application\app;..\application\HardFaultHandlerMDK;..\application\rtt;..\cmsis;..\common;..\driver\Inc;..\source;..\bsp\inc;..\application\nr_micro_shell;..\application\EventRecorder;..\application\fifo;..\application\bsp;..\application\adc;..\application\hardware;..\application\uart;..\application\clk;..\application\do</IncludePath>
+              <IncludePath>..\application\app;..\application\HardFaultHandlerMDK;..\application\rtt;..\cmsis;..\common;..\driver\Inc;..\source;..\bsp\inc;..\application\nr_micro_shell;..\application\EventRecorder;..\application\fifo;..\application\bsp;..\application\adc;..\application\hardware;..\application\uart;..\application\clk;..\application\do;..\application\DWTDelay;..\application\shell</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -381,16 +381,6 @@
       </TargetOption>
       <Groups>
         <Group>
-          <GroupName>app</GroupName>
-          <Files>
-            <File>
-              <FileName>app.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\application\app\app.c</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
           <GroupName>cpp</GroupName>
           <Files>
             <File>
@@ -428,11 +418,26 @@
               <FileType>8</FileType>
               <FilePath>..\application\do\do.cpp</FilePath>
             </File>
+            <File>
+              <FileName>DWTDelay.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\application\DWTDelay\DWTDelay.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>shell.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\application\shell\shell.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
           <GroupName>src</GroupName>
           <Files>
+            <File>
+              <FileName>app.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\app\app.c</FilePath>
+            </File>
             <File>
               <FileName>fifo.c</FileName>
               <FileType>1</FileType>
@@ -980,7 +985,7 @@
               <MiscControls></MiscControls>
               <Define>VECT_TAB_SRAM</Define>
               <Undefine></Undefine>
-              <IncludePath>..\application\app;..\application\HardFaultHandlerMDK;..\application\rtt;..\cmsis;..\common;..\driver\Inc;..\source;..\bsp\inc;..\application\hardware;..\application\nr_micro_shell;..\application\adc;..\application\EventRecorder;..\application\fifo;..\application\uart;..\application\clk;..\application\do</IncludePath>
+              <IncludePath>..\application\app;..\application\HardFaultHandlerMDK;..\application\rtt;..\cmsis;..\common;..\driver\Inc;..\source;..\bsp\inc;..\application\hardware;..\application\nr_micro_shell;..\application\adc;..\application\EventRecorder;..\application\fifo;..\application\uart;..\application\clk;..\application\do;..\application\DWTDelay;..\application\shell</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1022,16 +1027,6 @@
       </TargetOption>
       <Groups>
         <Group>
-          <GroupName>app</GroupName>
-          <Files>
-            <File>
-              <FileName>app.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\application\app\app.c</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
           <GroupName>cpp</GroupName>
           <Files>
             <File>
@@ -1069,11 +1064,26 @@
               <FileType>8</FileType>
               <FilePath>..\application\do\do.cpp</FilePath>
             </File>
+            <File>
+              <FileName>DWTDelay.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\application\DWTDelay\DWTDelay.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>shell.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\application\shell\shell.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
           <GroupName>src</GroupName>
           <Files>
+            <File>
+              <FileName>app.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\application\app\app.c</FilePath>
+            </File>
             <File>
               <FileName>fifo.c</FileName>
               <FileType>1</FileType>
