adc_sample: use cpp shell cmd define entry

--- a/embedded/adc_sample/MDK/adc_sample.uvprojx
+++ b/embedded/adc_sample/MDK/adc_sample.uvprojx
@@ -433,6 +433,11 @@
               <FileType>8</FileType>
               <FilePath>..\application\app\app.cpp</FilePath>
             </File>
+            <File>
+              <FileName>nr_micro_shell_commands.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\source\nr_micro_shell_commands.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -462,11 +467,6 @@
               <FileName>nr_micro_shell.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\application\nr_micro_shell\nr_micro_shell.c</FilePath>
-            </File>
-            <File>
-              <FileName>nr_micro_shell_commands.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\source\nr_micro_shell_commands.c</FilePath>
             </File>
             <File>
               <FileName>sys.h</FileName>
@@ -1079,6 +1079,11 @@
               <FileType>8</FileType>
               <FilePath>..\application\app\app.cpp</FilePath>
             </File>
+            <File>
+              <FileName>nr_micro_shell_commands.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\source\nr_micro_shell_commands.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1108,11 +1113,6 @@
               <FileName>nr_micro_shell.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\application\nr_micro_shell\nr_micro_shell.c</FilePath>
-            </File>
-            <File>
-              <FileName>nr_micro_shell_commands.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\source\nr_micro_shell_commands.c</FilePath>
             </File>
             <File>
               <FileName>sys.h</FileName>
